@@ -1,3 +1,8 @@
+2007-11-08  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am: Added check when copying over rt.jar to bootstrap/ecj
+	* Makefile.in: Regenerated.
+
 2007-11-07  Gary Benson  <gbenson@redhat.com>
 
 	* patches/icedtea-bytecodeInterpreter.patch: New file.
